kubernetes/apps/keycloak-stack/keycloak/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-svc
spec:
  selector:
    app.kubernetes.io/instance: keycloak
  ports:
  - name: http
    port: 8080
    targetPort: 8080
