kubernetes/apps/keycloak-stack/keycloak/ingress-admin.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-admin
  annotations:
    cert-manager.io/cluster-issuer: iam-demo-certs-issuer
spec:
  rules:
  - host: keycloak-admin.iam-demo.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              name: http
  tls:
  - hosts:
    - keycloak-admin.iam-demo.test
    secretName: iam-demo-keycloak-admin-tls
