kubernetes/apps/keycloak-stack/keycloak/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  annotations:
    cert-manager.io/cluster-issuer: iam-demo-certs-issuer
spec:
  rules:
  - host: keycloak.iam-demo.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak-svc
            port:
              number: 8080
  tls:
  - hosts:
    - keycloak.iam-demo.test
    secretName: iam-demo-keycloak-tls
